[package]
name = "openstreet"
version = "0.0.1"
authors = ["Hernawan Fa'iz Abdillah <hernawan.faiz.abdillah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "openstreet"
crate-type = ["cdylib"]

[dependencies]
fast_paths = "0.2.0"
fnv = "1.0.6"
osm-xml = "0.6.2"

[dependencies.pyo3]
version = "0.13.2"

[features]
# Enable the feature for python build
extension-module = ["pyo3/extension-module"]
default = []
